Added two collections for testing purposes

--- a/_config.yml
+++ b/_config.yml
@@ -29,3 +29,12 @@ timezone: "America/New_York"
 
 # Build settings
 markdown: kramdown
+
+# Collections
+collections:
+  documentation:
+    output: true
+    permalink: /documentation/:path/
+  samples:
+    output: true
+    permalink: /samples/:path/
