Added social media icon and link support

--- a/_config.yml
+++ b/_config.yml
@@ -10,13 +10,14 @@ title: Foundation Barebones
 email: clbranson@gmail.com
 name: Christina Branson
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Foundation Barebones is a barebones Jekyll theme featuring elements from the Foundation front-end framework.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: chrissybranso
-github_username:  christinabranson
+socialmedia: # url of social media accounts
+   twitter: https://twitter.com/chrissybranso
+   github:  https://github.com/christinabranson
+   facebook: 
+   linkedin:
 
 # URL Settings
 url: "" # the base hostname & protocol for your site
